# PROLOG-TRADE-BOT

./: .gitignore  Cargo.toml  README.md  pyproject.toml
python/main_module/: main.py
src/: lib.rs  main.rs
